# itemized_subsets

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
datagen/: Cargo.toml
datagen/src/: font_binaries.rs  fonts_xml.rs  fonts_xml_reader.rs  lib.rs  main.rs
itemizer/: Cargo.toml
itemizer/src/: error.rs  fallback_chain.rs  lib.rs
src/: fonts.rs  fonts_xml.rs  lib.rs  main.rs
